# fem-simulator

./: .gitignore  App.cc  App.h  CMakeLists.txt  README.md  config  fem  main.cpp
Frontend/GUI/: GUI.cc  GUI.h
Frontend/Output/: FileOutput.cc  GUI.cc  GUI.h  IO.h
Module/BodyEnergy/: BodyEnergy.cc  BodyEnergy.h  ExternalForce.h  Gravity.cc  Gravity.h  GroundForce.cc  GroundForce.h  RobotArmForce.cc  RobotArmForce.h  SoftBodyGravity.cc  SoftBodyGravity.h
Module/ConsistencyModel/: ConsistencyModel.cc  ConsitencyModel.h  StVKModel.cc  StVKModel.h
Module/ConstituteModel/: ConstituteModel.cc  ConstituteModel.h  StVKModel.cc  StVKModel.h
Module/Constraint/: Constraint.h  PlaneConstraint.cc  PlaneConstraint.h
Module/Contact/: ContactGenerator.cc  ContactGenerator.h  DCDContactGenerator.cc  DCDContactGenerator.h  FrictionModel.cc  FrictionModel.h  PolygonFrictionModel.cc  PolygonFrictionModel.h  PolyhedralCone.cc  PolyhedralCone.h  Surface.h
Module/Contact/CCD/: CCD.cc  CCD.h
Module/Contact/DCD/: DCD.cc  DCD.h  FastDCD.cc  FastDCD.h  tritritest.cc  tritritest.h
Module/ElementEnergy/: DissipationEnergy.cc  DissipationEnergy.h  ElasticEnergy.cc  ElasticEnergy.h  ElementDefinition.h  RayleighModel.cc  RayleighModel.h  SimpleModel.cc  SimpleModel.h
Module/Function/: Function.h
Module/Integrator/: Integrator.cc  Integrator.h  LCPIntegrator.cc  LCPIntegrator.h  NonFricLCPIntegrator.cc  NonFricLCPIntegrator.h  StaggerLCPIntegrator.cc  StaggerLCPIntegrator.h
Module/Logger/: Exception.cc  Exception.h  Logger.cc  Logger.h
Module/Mass/: MassModel.cc  MassModel.h  VoronoiModel.cc  VoronoiModel.h
Module/Mesh/: Mesh.cc  Mesh.h
Module/NumericSolver/: NumericSolver.h
Module/NumericSolver/LCPSolver/: BGS.cc  BGS.h  LCPSolver.h  OSQPWrapper.cc  OSQPWrapper.h  PGS.cc  PGS.h  PivotingMethod.cc  PivotingMethod.h
Module/NumericSolver/Optimizer/: InteriorPoint.cc  InteriorPoint.h  NewtonIterator.h  Optimizer.h
Module/Object/: DOFShapeConverter.h  Object.cc  Object.h
Module/Object/RigidBody/: FixedSlab.cc  FixedSlab.h  RigidBody.cc  RigidBody.h  RigidBodyDOFShapeConverter.cc  RigidBodyDOFShapeConverter.h  RobotArm.cc  RobotArm.h
Module/Object/RigidBody/Shape/: Rectangle.cc  Rectangle.h  Shape.h
Module/Object/SoftBody/: SoftBody.cc  SoftBody.h
Module/Optimizer/: InteriorPoint.cc  InteriorPoint.h  NewtonIterator.cc  NewtonIterator.h  Optimizer.cc  Optimizer.h
Module/Output/: FileOutput.h  GUIOutput.cc  GUIOutput.h  IO.cc  IO.h
Module/RigidBody/: Rectangular.cc  Rectangular.h  RigidBody.h
Module/Simulator/: Simulator.cc  Simulator.h
Module/SoftBody/: SoftBody.h
Module/Solver/: BackwardSolver.cc  BackwardSolver.h  BackwardTarget.cc  BackwardTarget.h  Solver.cc  Solver.h  Target.cc  Target.h
Module/Solver/LCPSolver/: LCPSolver.cc  LCPSolver.h  PGS.cc  PGS.h  PivotingMethod.cc  PivotingMethod.h
Module/System/: System.cc  System.h
Module/Util/: EigenAll.h  Factory.cc  Factory.h  Pattern.h  Timing.h
Renderer/: .gitignore  CMakeLists.txt
Renderer/cmake/: .gitignore  CPM_0.34.0.cmake  get_cpm.cmake
Renderer/patch/: glm.patch
Renderer/src/GUI/: GUI.cc  GUI.hpp
Renderer/src/Material/: Material.cc
Renderer/src/MeshObject/: MeshObject.cc  MeshObject.hpp  Scene.cc  Scene.hpp
Resource/: .gitignore
Resource/config/: robot-arm.json  three-slab
Resource/vtk/: bunny.vtk  cube.vtk  ground.vtk  rectangular.vtk  two-tet.vtk  upside-down-tet.vtk
UnitTest/: CMakeLists.txt  OptimizerTest.cc  Test.cc  Test.h
UnitTest/src/: BodyEnergyTest.cc  ConstituteModelTest.cc  ElasticForceTest.cc  LCPSolverTest.cc  NumericDifferential.cc  NumericDifferential.h  OptimizerTest.cc  RigidBodyContactTest.cc
cmake/: CPM.cmake  FindSuiteSparse.cmake
patch/: eigen.patch  osqp-eigen.patch
